# game-engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
App/: AppLayer.cpp  AppLayer.h  PauseLayer.cpp  PauseLayer.h  main.cpp
Core/: Application.cpp  Application.h  Layer.h  Model.h
Core/Audio/: Audio.cpp  Audio.h
Core/Common/: structs.h
Core/ECS/: Components.h
Core/Input/: Input.cpp  Input.h
Core/Physics/: Physics.cpp  Physics.h
Core/Renderer/: Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Core/ResourceManager/: ResourceManager.cpp  ResourceManager.h
include/: GFXAPI.h  engine.h  linmath.h  renderer.h  ui.h  utils.h
res/models/: shapes.c
res/shader/: fragment.frag  fragment2D.frag  vertex.vert  vertex2D.vert
res/shaders/: fragment.glsl  vertex.glsl
src/: GFXAPI.c  main.c  renderer.c  ui.c  utils.c
